# data-ingestor

./: .editorconfig  .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.agents/skills/learning-documenter/: SKILL.md
.agents/skills/learning-documenter/assets/: module-learning.md
.codex/agents/: learning-documenter.toml
.github/agents/: learning-documenter.md
.github/workflows/: ci.yml
docs/adr/: ADR-001-adotar-poetry.md
docs/architecture/: solution-design.md
docs/learning/modules/: 01-initial-project-setup.md
tests/: test_smoke.py
