[project]
name = "data-ingestor"
version = "0.1.0"
description = "Sistema de ingestão batch, CDC e streaming para um lakehouse de detecção de fraudes bancárias."
readme = "README.md"
authors = [
  { name = "Alexandre Rodrigues" }
]
requires-python = ">=3.10,<3.12"
dependencies = [
  "boto3>=1.34.0,<2.0.0",
  "confluent-kafka>=2.5.0,<3.0.0",
  "jsonschema>=4.23.0,<5.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pyyaml>=6.0.0,<7.0.0"
]

[dependency-groups]
dev = [
  "pytest>=9.0.3,<10.0.0",
  "pytest-cov>=5.0.0,<7.0.0",
  "ruff>=0.6.0,<1.0.0"
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
